# SimCity-reproduction

./: .env.example  .gitignore  2510.01297v1.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  PHASE2_VERIFICATION.md  README.md  TASKS.md  app.py  codecov.yml  pyproject.toml  requirements.txt  test_food_tracking.py
.claude/: settings.local.json
.github/workflows/: lint.yml  test.yml
config/: llm_config.yaml  simulation_config.yaml
data/: initial_households.json
docs/: API.md  OPTIMIZATION.md  USAGE.md
experiments/: robustness_test.py  validation.py
experiments/baseline_180steps_optimized/: results.json  summary.json  validation_report.json
experiments/baseline_30steps/: results.json  summary.json  validation_report.json
experiments/baseline_optimized_50steps/: results.json  summary.json  validation_report.json
experiments/baseline_run/: results.json  summary.json
experiments/final_180step_test/: results.json  summary.json
experiments/firm_init_test/: results.json  summary.json
experiments/food_tracking_test/: results.json  summary.json
experiments/llm_integration_test/: results.json  summary.json
experiments/market_integration_test/: results.json  summary.json
experiments/my_baseline_run/: results.json  summary.json  validation_report.json
experiments/my_baseline_run_1/: results.json  summary.json  validation_report.json
experiments/phase9_10_test/: results.json  summary.json
experiments/phase9_8_test/: results.json  summary.json
experiments/phase9_8_test_v2/: results.json  summary.json
experiments/phase9_9_2_test/: results.json  summary.json
experiments/phase9_9_3_test/: results.json  summary.json
experiments/phase9_9_4_test/: results.json  summary.json
experiments/phase9_9_5_test/: results.json  summary.json
experiments/phase9_9_test/: results.json  summary.json
experiments/stage_test/: results.json  summary.json
experiments/test_30step/: results.json  summary.json  validation_report.json
experiments/test_30step_v2/: results.json  summary.json  validation_report.json
experiments/test_30steps_baseline/: results.json  summary.json  validation_report.json
experiments/test_30steps_final/: results.json  summary.json  validation_report.json
experiments/test_cache_clear_verification/: results.json  summary.json
experiments/test_final_180steps/: results.json  (+2 more)
scripts/: generate_initial_households.py  run_baseline.py  run_shock_experiments.py  test_30steps.py  test_llm_integration.py  test_phase8_180steps.py  test_phase8_1_2_verification.py  test_phase8_30steps.py
tests/: conftest.py  test_dashboard.py  test_dashboard_integration.py  test_economic_models.py  test_financial_market.py  test_geography.py  test_goods_market.py  test_household_agent.py  test_integration.py  test_labor_market.py  test_llm_integration.py  test_map_generator.py  test_performance.py  test_phase2_agents.py  test_phase5_data.py  test_phase9_integration.py  test_plots.py  test_robustness.py  test_validation.py
(+137 files in other folders)
